2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Xml.Formatting/XmlFormattingPolicyPanelWidget.cs:
	  Fix translation error.

2010-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/IXmlCompletionProvider.cs:
	* MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/EmptyXmlCompletionProvider.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataCollection.cs:
	* MonoDevelop.XmlEditor.Completion/InferredXmlCompletionProvider.cs:
	* MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs:
	  Track API changes.

2010-05-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Xml.Formatting/MonoXmlPolicy.xml: Added
	  attribute to explicitly allow differential serialization for
	  a policy (which is disabled by default).

2010-04-30  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.XmlEditor.Gui/XmlEditorOptionsPanel.cs:
	* MonoDevelop.XmlEditor.Gui/XmlEditorOptionsPanelWidget.cs:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget.cs:
	  Added GUI for the 'auto insert punctuation' option.

	* Makefile.am:
	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.XmlEditor/XmlEditorOptions.cs:
	* MonoDevelop.XmlEditor/XmlEditorAddInOptions.cs: Renamed
	  file.

	* MonoDevelop.Xml.Formatting/XmlFormatterWriter.cs: Spelling.

	* MonoDevelop.XmlEditor.addin.xml: Move panel from Style
	  section to Behavior.

2010-04-30  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs: Add
	  settings to stop inserting snippets like ="" and />.

	* MonoDevelop.XmlEditor/XmlSchemaManager.cs:
	* MonoDevelop.XmlEditor/XmlFileExtensions.cs: